<resources>
    <string name="app_name">Live Cricket Instant Score</string>
    <!--Menu Items-->
    <string name="app_home">Home</string>
    <string name="app_recent">Recent</string>
    <string name="app_upcoming">Upcoming</string>
    <string name="app_team_ranking">Teams Ranking</string>
    <string name="app_player_ranking">Player Ranking</string>
    <string name="adblock">We detected ad blocker or vpn running on your device.Please disable adblocker and then use our app.</string>
    <string name="ad_blocker">adblocker</string>
    <!--SplashScreen-->
    <string name="no_internet_string">Internet connection lost! , please check your internet connection.</string>
    <string name="retry">Retry</string>
    <string name="teamImage">Team Image</string>

    <string name="usb_debugging">Please Disable \"USB Debugging\" from your phone to use the app.</string>

    <!--fixtureItemAdapter-->
    <string name="venue">Venue:%1$s %2$s.</string>
    <string name="startTime">Start in:%1$dh %2$dm.</string>
    <string name="startedTime">Started:%1$dh %2$dm.</string>
    <string name="dateAndTime">%1$s %2$s %3$s,%4$s.</string>
    ///
    <string-array name="matches_formats">
        <item>T20</item>
        <item>ODI</item>
        <item>TEST</item>
    </string-array>
    <string-array name="matches_formats_players">
        <item>Batsman</item>
        <item>All Rounders</item>
        <item>Bowlers</item>
    </string-array>
    <string name="noLive">No live match available to show.</string>
    <string name="noRecent">No recent match is available to show.</string>
    <string name="noUpcoming">No Upcoming match available to show.</string>

    <string name="noRecentT20">No recent t20 match available to show.</string>
    <string name="noRecentODI">No recent Odi match is available to show.</string>
    <string name="noRecenttest">No recent test match available to show.</string>

    <string name="noUpcomingT20">No Upcoming t20 match available to show.</string>
    <string name="noUpcomingODI">No Upcoming Odi match is available to show.</string>
    <string name="noUpcomingtest">No Upcoming test match available to show.</string>

    <!--    rating team -->
    <string name="team_name">Team Name</string>
    <string name="rank">Rank</string>
    <string name="team">Team</string>
    <string name="points">Points</string>
    <string name="avg">Avg</string>
    <string name="rating">Ratings</string>

    <string name="rate">Rate</string>
    <string name="Exit">Exit</string>
    <string name="app_rating">App Rating..</string>

    <!--PlayerScreen-->
    <string name="yes">liveIcon</string>
    <string name="playerLive">Live</string>
    <string name="lockIcon">lockIcon</string>
    <string name="pauseIcon">pauseIcon</string>
    <string name="screenModeIcon">screenModeIcon</string>
    <string name="playerStretch">Stretch</string>
    <string name="volume">volume</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <!--AppUpdateDialog-->
    <string name="appUpdate">Please, update to new version to continue reposting.</string>
    <string name="noThanks">No,Thanks</string>
    <string name="Up">Update</string>
    <string name="version">New version available</string>
</resources>